# AutoPG

./: .env.example  .gitignore  AUTOPG.md  CLAUDE.md  COMPARISON.md  DESIGN.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  test_agent.py
.autopg/: .mcp.example.json
.claude/: .mcp.example.json
autopg/: __init__.py  context_schema.py  graph.py  main.py
autopg/agent/: __init__.py  prompt_sections.py  query_engine.py  state.py  subagent.py  system_prompt.py
autopg/agent/tools/: agent_definitions.py
autopg/backend/: server.py
autopg/cli/: __init__.py  commands.py  repl.py  session_picker.py
autopg/context/: __init__.py  collapse.py  compact.py  memory.py
autopg/frontend/: __init__.py
autopg/mcp/: __init__.py  loader.py  manager.py
autopg/middleware/: __init__.py  context.py  file_cache.py  permissions.py  session.py  user_hooks.py
autopg/skills/: __init__.py  loader.py
autopg/skills/bundled/: commit.md  review.md
autopg/tools/: __init__.py  agent_tool.py  ask_user.py  base.py  display.py  glob.py  monitor.py  plan_mode.py  skill.py  skill_tool.py  todo_write.py  web_search.py
autopg/utils/: __init__.py  config.py  file_cache.py  hooks.py  logger.py  messages.py  permissions.py  session.py
db_claude/: __init__.py  graph.py  main.py
db_claude/agent/: __init__.py  graph.py  prompt_sections.py  query_engine.py  query_loop.py  state.py  subagent.py  system_prompt.py
db_claude/backend/: __init__.py  protocol.py  server.py
db_claude/cli/: __init__.py  commands.py  repl.py  session_picker.py
db_claude/context/: __init__.py  collapse.py  compact.py  memory.py
db_claude/frontend/: __init__.py
db_claude/frontend/tui/: app.py
db_claude/mcp/: loader.py  manager.py
db_claude/middleware/: __init__.py  base.py  collapse.py  compact.py  context.py  file_cache.py  permissions.py  session.py  tool_budget.py  tracking.py
db_claude/skills/: __init__.py  loader.py
db_claude/tools/: __init__.py  agent_tool.py  ask_user.py  base.py  bash.py  cron.py  display.py  file_edit.py  file_read.py  file_write.py  format_utils.py  glob.py  grep.py  monitor.py  notebook_edit.py  plan_mode.py  skill.py  skill_tool.py  task.py  todo_write.py  web_search.py  workflow.py
db_claude/utils/: __init__.py  config.py  file_cache.py  hooks.py  logger.py  messages.py  permissions.py  session.py
postgres_mcp/: __init__.py  artifacts.py  pgbench.py  server.py
postgres_mcp/database_health/: __init__.py  buffer_health_calc.py  connection_health_calc.py  constraint_health_calc.py  database_health.py  index_health_calc.py  replication_calc.py  sequence_health_calc.py  vacuum_health_calc.py
postgres_mcp/explain/: __init__.py  explain_plan.py
postgres_mcp/index/: dta_calc.py  index_opt_base.py  llm_opt.py  presentation.py
postgres_mcp/sql/: __init__.py  bind_params.py  extension_utils.py  index.py  safe_sql.py  sql_driver.py
postgres_mcp/top_queries/: __init__.py  top_queries_calc.py
scripts/: start-autopg.sh  start-db-claude.sh  stop-autopg.sh  stop-db-claude.sh
(+2 files in other folders)
