[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autopg"
version = "1.0.0"
description = "AutoPG: an intelligent PostgreSQL tuning agent built with LangChain and LangGraph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.0",
    "langgraph>=1.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.2.0",
    "mcp[cli]>=1.25.0",
    "psycopg[binary]>=3.3.2",
    "psycopg-pool>=3.3.0",
    "humanize>=4.15.0",
    "pglast==7.11",
    "attrs>=25.4.0",
    "instructor>=1.14.4",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
autopg = "autopg.main:main"
postgres-mcp = "postgres_mcp:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["references*", "tests*"]

[tool.setuptools.package-data]
"postgres_mcp.database_health" = ["*.sql"]
